transform new.html.erb railsy form with form_tag

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Create new user</h1>
+<!--
 <form action="/users/" method="post" accept-charset="UTF-8">
 <label for="username">Username:</label>
 <input type="text" id="username", name="user[username]"><br><br>
@@ -9,3 +10,17 @@
 <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 <input type="submit" value="Submit">
 </form>
+-->
+
+<%= form_tag("/users/", method:"post") do %>
+  <%= label_tag(:username, "Username:") %>
+  <%= text_field_tag(:username) %>
+  <br><br>
+  <%= label_tag(:email, "Email:") %>
+  <%= text_field_tag(:email) %>
+  <br><br>
+  <%= label_tag(:password, "Password:") %>
+  <%= text_field_tag(:password) %>
+  <br><br>
+  <input type="submit" value="Submit">
+<% end %>
