add edit + error messages into forms

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,9 +26,4 @@
 <% end %>
  -->
 
- <%= form_with model: @user do |form| %>
-  <%= form.label :username, 'Username:'%>
-  <%= form.text_field :username %>
-  <br><br>
-  <%= form.submit "Submit" %>
- <% end %>
+<%= render 'form', user: @user %>
